Enable host name verification for secure WebSocket client connections by default.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc8.5.x/trunk@1833758 13f79535-47bb-0310-9956-ffa450edef68